Fixed the x overflow issue in table mode

--- a/src/app/grid/grid.component.scss
+++ b/src/app/grid/grid.component.scss
@@ -133,7 +133,7 @@
     table-layout: fixed;
     padding:0;
     width:100%;
-    border: 1px solid $grey-100;
+    //border: 1px solid $grey-100;
     .sort{
       display: none;
     }
